# psychopy_workshop

./: .gitignore  README.md  environment.yml  installation_notes.md  meeting_notes.md  personal_notes.md  pyproject.toml
01_intro_to_python/: 1 (Solutions) Introduction to Python.ipynb  1 Introduction to Python.ipynb
02_flow_control/: 2 (Solutions) Experimental Flow Control.ipynb  2 Experimental Flow Control.ipynb
03_config_files/: 3 (Solutions) Configuring Experiments.ipynb  3 Configuring Experiments.ipynb
04_command_line_interfaces/: 4 (Solution) Creating Reusable Experiments with CLIs.ipynb  4 Creating Reusable Experiments with CLIs.ipynb
05_functions/: 5 (Solutions) Modularizing an Experiment with Functions.ipynb  keys.py  make_tone.py  my_functions.py  my_module.py
06_automated_testing/: .coverage  6 (Solutions) Automated Testing with Pytest.ipynb  6 Automated Testing with Pytest.ipynb  test_sequencegen.py
07_mocks/: 7 (Solutions) Mocking and Patching for Testing.ipynb  7 Mocking and Patching for Testing.ipynb
08_monkey_patches/: experiment.py  run_simulated.py
09_path_objects/: 9 (Solutions) Filepaths With Pathlib.ipynb
09_tmpdir_fixtures/: 9 (Solutions) Temporary Directory Test Fixtures.ipynb  (+1 more)
10_packaging_demo/: config.json  demo_notes.md  experiment.py  pyproject.toml  test_config.json
10_packaging_demo/data/sub-01/: block_1.csv  block_2.csv  block_3.csv  block_4.csv  block_5.csv
10_packaging_demo/posner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
10_packaging_demo/tests/: conftest.py  test_db.py  test_experiment.py  test_visual.py
(+88 files in other folders)
